# apriltags3_duckiebot

./: .gitmodules  Dockerfile  Makefile  README.md
apriltags3_ros/apriltags3/: CMakeLists.txt  package.xml
apriltags3_ros/apriltags3/include/apriltags/: Makefile  apriltag_demo
apriltags3_ros/apriltags3_ros/: CMakeLists.txt  package.xml  setup.py
apriltags3_ros/apriltags3_ros/include/apriltags3_ros/: __init__.py  apriltags3.py  utils.py
apriltags3_ros/apriltags3_ros/launch/: apriltags3_detector_node.launch
apriltags3_ros/apriltags3_ros/src/: apriltags3_detector_node.py
